initial business groups concept implemented at server & api
