# apim-server/server/routes.ts
@@ -6,6 +6,7 @@ import apsConnectorRouter from './api/controllers/apsConfig/apsConnectors/ApsCon
 import apsAboutRouter from './api/controllers/apsConfig/apsAbout/ApsAboutRouter';
 import apsMonitorRouter from './api/controllers/apsMonitor/ApsMonitorRouter';
 import apsOrganiztionsRouter from './api/controllers/apsAdministration/apsOrganizations/ApsOrganizationsRouter';
+import apsBusinessGroupRouter from './api/controllers/apsOrganization/apsBusinessGroups/ApsBusinessGroupsRouter';
 import verifyServerStatus from './api/middlewares/verifyServerStatus';
 
 export default function routes(app: Application, apiBase: string): void {
@@ -21,6 +22,7 @@ export default function routes(app: Application, apiBase: string): void {
   router.use('/apsConfig/apsConnectors', apsConnectorRouter);
   router.use('/apsConfig/apsAbout', apsAboutRouter);
   router.use('/apsAdministration/apsOrganizations', apsOrganiztionsRouter);
+  router.use('/apsBusinessGroups', apsBusinessGroupRouter);
   // TODO: Test passport
   // const passport = PassportFactory.build();
   // router.use(passport.initialize());
